<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/logoSignUp"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_sentiscape_logo"/>

    <EditText
        android:id="@+id/usernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:singleLine="true"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/logoSignUp"/>

    <EditText
        android:id="@+id/emailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="text"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/usernameSignUp"/>

    <EditText
        android:id="@+id/passwordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/emailSignUp"/>

    <android.widget.Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordSignUp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:text="Sign Up"/>

</RelativeLayout>